# CG2021

./: .gitignore  README.md
Engine/: CMakeLists.txt  config.xml
Engine/configs/: angel.xml  billiard.xml  box.xml  cone.xml  config.xml  lightTest.xml  plane.xml  snowman.xml  sphere.xml  teapot.xml  test.xml  texTest.xml  torus.xml
Engine/include/: Figure.h  Frustum.h  Group.h  Plane.h  VBO.h
Engine/include/Lights/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
Engine/include/Transformations/: Rotation.h  Scale.h  Transform.h  Translation.h
Engine/include/XMLParser/: xmlParser.h
Engine/models/: bezierTest.3d  box.3d  cone.3d  invertedSphere.3d  lightTest.3d  plane.3d  sphere.3d  teapot.3d  texTest.3d  texTestBez.3d  texTestSat.3d  torus.3d  torusBig.3d
Engine/src/: Figure.cpp  Frustum.cpp  Group.cpp  Group.h  Plane.cpp  VBO.cpp  VBO.h  main.cpp
Engine/src/Lights/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
Engine/src/Transformations/: Rotation.cpp  Scale.cpp  Scale.h  Transform.h  Translation.cpp
Engine/src/XMLParser/: tinyxml2.cpp  xmlParser.cpp  xmlParser.h
Generator/: CMakeLists.txt  Makefile
Generator/include/: Bezier.h  Box.h  Cone.h  Model.h  Patch.h  Plane.h  Ponto3D.h  Sphere.h  Torus.h  Triangle.h  Triangulo.h
Generator/patches/: asteroid.patch
Generator/src/: Bezier.cpp  Box.cpp  Cone.cpp  Model.cpp  Plane.cpp  Ponto3D.cpp  Sphere.cpp  Torus.cpp  Triangle.cpp  Triangulo.cpp  main.cpp
Utils/: Point3D.cpp  Point3D.h  Ponto3D.cpp  Ponto3D.h  Triangle.cpp  Triangle.h  Triangulo.cpp  Triangulo.h
